--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "analytics-dashboard",
+  "name": "analytics-dashboard-enhanced",
   "private": true,
   "version": "1.0.0",
   "type": "module",
